[package]
name = "loghawk"
version = "0.1.0"
authors = ["Jan Starke <jan.starke@posteo.de>"]
license = "GPL-v3"
edition = "2021"

[dependencies]
crossterm = "0.27.0"
ratatui = "0.26.0"
clap = {version="^4", features=["derive"] }
clio = {version="0.3.5", features=["clap-parse"] }
getset = "0.1.2"
anyhow = "1.0.83"
csv = "1.3.0"
