[package]
name = "loghawk"
version = "0.1.1"
authors = ["Jan Starke <jan.starke@posteo.de>"]
license = "GPL-3.0"
edition = "2021"
description = "A cli tool to display large CSV files"
repository = "https://github.com/janstarke/loghawk"


[dependencies]
crossterm = "0.27.0"
ratatui = "0.26.0"
#ratatui = {path="../tmp/ratatui"}
clap = {version="^4", features=["derive", "wrap_help"] }
clio = {version="0.3.5", features=["clap-parse"] }
getset = "0.1.2"
anyhow = "1.0.83"
csv = "1.3.0"
encoding_rs = "0.8.34"

unicode-segmentation = "1.7.1"
unicode-width = "0.1.13"